--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "trie-search": "^2.2.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
